[package]
name = "derive_builder"
version = "0.0.0"
autotests = false
edition = "2021"
publish = false

[lib]
proc-macro = true

[[test]]
name = "tests"
path = "tests/progress.rs"

[dev-dependencies]
trybuild = { version = "1.0.49"}

[dependencies]
quote = "1.0.26"
syn = { version = "2.0.8", features = ["printing"]}
proc-macro2 = "1.0.52"
