[package]
name = "derive_debug"
version = "0.0.0"
autotests = false
edition = "2021"
publish = false

[lib]
proc-macro = true

[[test]]
name = "tests"
path = "tests/progress.rs"

[dev-dependencies]
trybuild = { version = "1.0.49" }

[dependencies]
proc-macro2 = "1.0.52"
syn = { version = "2.0.8", features = ["extra-traits"] }
quote = "1.0.26"
